	corrected, an harmonic mean of Ti being used

	* the definition of tss.default is simplified

	* the fitted.values element was missing for plm objects and has
	been added

Change since version 1-1.4

	* a args argument is added for plm objects, and the internal
	function relies now on it (and not on the call as previously)

	* more attention is paid when one of the estimated components of
	the variance is negative (warning or error messages result)

	* pdata.frame objects are re-introduced. They are used to compute
	model.frames. Extraction from pdata.frames results in 'pserie'
	objects which have an index attribute.

	* the print method of ercomp is now exported

	* the first argument of pgmm may now be a formula. A lag.form must
	be provided in this case
	
	* hausman-taylor estimation is now performed by the pht function. For
	backaward compatibility reasons, it is still possible to estimate
	this model with plm

Changes since version 1.2-0	

	* the as.matrix and print methods for pserie objects are now exported

	* in summary.plm, the p-value is now computed using a Student
	distribution and not a normal one

	* the lag.pserie method is modified so that it deals correctly
	with factors, and not only with numeric vectors. The diff.pserie
	method returns an error if its argument is not numeric

	* the instruments-"backward compatibility" stuff in plm is
	simplified thanks to the new features of Formula

	* 'pserie' is renamed 'pseries'

	* a THANKS file is added
	
	* the `[.pdata.frame` function is modified so that [, j] returns a
	pseries and not a pdata.frame when j is a single integer, and a
	backward compatibility feature is added for the "index" attribute

Changes since version 1.2-1

	* a new purtest function to perform unit root tests

	* [[.pdata.frame is modified so that NULL (and not an error
	message) is returned if an unknown column is selected

Changes since version 1.2-2

	* the documentation has been improved
	